# hetbuilder

./: --uninstall  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  dockerfile  environment.yaml  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: python-package-miniconda.yml
_skbuild/linux-x86_64-3.9/cmake-build/: CMakeCache.txt  CMakeSpec.json  Makefile  cmake_install.cmake  install_manifest.txt
app/: App.svelte  app.py
app/client/: package-lock.json  package.json  rollup.config.js
app/client/src/: App.svelte
backend/: atom_class.cpp  atom_class.h  atom_functions.cpp  atom_functions.h  coincidence_algorithm.cpp  coincidence_algorithm.h  helper_classes.cpp  helper_classes.h  interface_class.cpp  interface_class.h  logging.cpp  logging.h  logging_functions.cpp  logging_functions.h  main.cpp  math_functions.cpp  math_functions.h  pybindings.cpp  symmetry.cpp  symmetry.h  test.cpp  test.h
docs/: cli.md  conf.py  implementation.md  index.rst  intro.md  python_interface.md  sphinx.txt
docs/hetbuilder/: algorithm.rst  plotting.rst
hetbuilder/: __init__.py  algorithm.py  atom_checks.py  backend_test.py  cli.py  log.py  logging_settings.py  plotting.py  test.py  utils.py
hetbuilder/backend/: coincidence_algorithm.cpp  coincidence_algorithm.h  math_functions.cpp  math_functions.h  pybindings.cpp  test.cpp  test.h
tests/: C122Mo37S74_angle1.00_stress0.00.xyz  C82Mo24S48_M9-7-710_N-9-121112_a20.00_s0.0.xyz  cubic.xyz  example.py  performance_plot.py  test.py  test_algorithm.py  test_backend.py  test_performance.py
