[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "scikit-build-core>=0.3.3",
  "pybind11",
  "pybind11-global",
  "numpy",
  "spglib"
]
build-backend = "scikit_build_core.build"

[project]
name = "hetbuilder"
readme = "README.md"
authors = [
  { name = "Roman Kempt", email = "roman.kempt@web.de" },
]
requires-python = ">=3.11"
version = "0.8.1"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.scikit-build]
wheel.expand-macos-universal-tags = true



